[gd_scene load_steps=6 format=3 uid="uid://lv7u48txlta5"]

[ext_resource type="Script" path="res://player.gd" id="1_w1kno"]
[ext_resource type="Texture2D" uid="uid://bhxwi07oy7bb4" path="res://icon.svg" id="2_incig"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_oys56"]
light_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_vjqci"]
radius = 63.3877

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_807db"]
light_mode = 1

[node name="Player" type="CharacterBody2D"]
collision_mask = 4
script = ExtResource("1_w1kno")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 63
material = SubResource("CanvasItemMaterial_oys56")
texture = ExtResource("2_incig")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vjqci")

[node name="gun_sprite" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_807db")
position = Vector2(72, 48)
rotation = -0.0863617
scale = Vector2(0.421875, 0.125)
texture = ExtResource("2_incig")

[node name="bullet_spawn" type="Marker2D" parent="."]
position = Vector2(110, 44)

[node name="firerate_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="firerate_timer" to="." method="_on_firerate_timer_timeout"]
